{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 183,
  "lineage": "4015688c-3aa4-f3de-e088-ec2b39900b52",
  "resources": [
    {
      "module": "module.compute[\"Jenkins-Server\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_lab5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03eb2af137e880d5d",
            "arn": "arn:aws:ec2:us-east-1:503577946194:elastic-ip/eipalloc-03eb2af137e880d5d",
            "association_id": "eipassoc-09b1277d5e755bbe3",
            "domain": "vpc",
            "id": "eipalloc-03eb2af137e880d5d",
            "instance": "i-0ee0eb489f0706a78",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a312f41b979607f2",
            "private_dns": "ip-172-31-12-66.ec2.internal",
            "private_ip": "172.31.12.66",
            "public_dns": "ec2-34-198-237-73.compute-1.amazonaws.com",
            "public_ip": "34.198.237.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.lab5-keypair",
            "module.compute.aws_instance.instance_lab5",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute[\"Jenkins-Server\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_lab5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:503577946194:instance/i-0ee0eb489f0706a78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee0eb489f0706a78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "lab5-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a312f41b979607f2",
            "private_dns": "ip-172-31-12-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.66",
            "public_dns": "ec2-34-238-162-11.compute-1.amazonaws.com",
            "public_ip": "34.238.162.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-04e1cb6ece5062906",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "public_sg_lab5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014bd906e44131848",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05374ef1651a30b97"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab5-keypair",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute[\"Jenkins-Slave\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_lab5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014cb4bf1256a3927",
            "arn": "arn:aws:ec2:us-east-1:503577946194:elastic-ip/eipalloc-014cb4bf1256a3927",
            "association_id": "eipassoc-0547a81acd1aad182",
            "domain": "vpc",
            "id": "eipalloc-014cb4bf1256a3927",
            "instance": "i-09c5cb844f3566979",
            "network_border_group": "us-east-1",
            "network_interface": "eni-062f78c5d13b290dd",
            "private_dns": "ip-172-31-6-119.ec2.internal",
            "private_ip": "172.31.6.119",
            "public_dns": "ec2-98-85-58-155.compute-1.amazonaws.com",
            "public_ip": "98.85.58.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.lab5-keypair",
            "module.compute.aws_instance.instance_lab5",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute[\"Jenkins-Slave\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_lab5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:503577946194:instance/i-09c5cb844f3566979",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c5cb844f3566979",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "lab5-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062f78c5d13b290dd",
            "private_dns": "ip-172-31-6-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.119",
            "public_dns": "ec2-18-212-117-89.compute-1.amazonaws.com",
            "public_ip": "18.212.117.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-03c5712a4a6dcebfc",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "public_sg_lab5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014bd906e44131848",
            "tags": {
              "Name": "Jenkins-Slave"
            },
            "tags_all": {
              "Name": "Jenkins-Slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05374ef1651a30b97"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab5-keypair",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503577946194:security-group/sg-0f74abd6418e05563",
            "description": "private_sg_lab5",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f74abd6418e05563",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05374ef1651a30b97"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05374ef1651a30b97"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg_lab5",
            "name_prefix": "",
            "owner_id": "503577946194",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ae8b815d01b87f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503577946194:security-group/sg-05374ef1651a30b97",
            "description": "public_sg_lab5",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05374ef1651a30b97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg_lab5",
            "name_prefix": "",
            "owner_id": "503577946194",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ae8b815d01b87f2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}